# ctp_swig_build

./: .gitignore  README.md  README_CN.md  build.py  ctp_demo.py  meson.build  pyproject.toml  thostmduserapi.i  thosttraderapi.i
ctp/: _thostmduserapi.cp313-win_amd64.lib  _thosttraderapi.cp313-win_amd64.lib  thostmduserapi.py  thostmduserapi.pyi  thosttraderapi.pyi
ctp_api/: __init__.py  thosttraderapi.py
ctp_source/: readme.txt  thostmduserapi_se.lib  thosttraderapi_se.lib
